--- a/index.html
+++ b/index.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
+
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
 
-    <title>Bootstrap 101 Template</title>
+    <title>Challenge 5</title>
 
     <!-- Bootstrap - Latest compiled and minified CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
@@ -25,9 +26,40 @@
     <link href="css/style.css" rel="stylesheet">
 
 </head>
-<body>
 
-<h1>Bootstrap CDN template</h1>
+<body>
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-xs-12 col-sm-6 col-md3">
+
+                <header>
+                    <h1>Progeny MMXIV</h1>
+                </header>
+            </div>
+
+        </div>
+
+        <div class="row">
+            <div class="col-xs-12 col-sm-6 col-md-6">
+
+                <article class="">
+                    <img src="" alt="">
+                    <h2>Blog</h2>
+                    <h3>Nowell Wordpress Audiotheme Features Overview</h3>
+                </article>
+                <article class="">
+                    <img src="" alt="">
+                    <h2>Records</h2>
+                    <h3>Atascosa Sand</h3>
+                </article>
+                <article class="">
+                    <img src="" alt="">
+                    <h2>Videos</h2>
+                    <h3>Drew Kennedy-Angel Brand</h3>
+                </article>
+            </div>
+
 
 </body>
+
 </html>
