la méthode je comprends mais j'y arrive pas

--- a/index.html
+++ b/index.html
@@ -36,29 +36,88 @@
                     <h1>Progeny MMXIV</h1>
                 </header>
             </div>
-
         </div>
 
         <div class="row">
-            <div class="col-xs-12 col-sm-6 col-md-6">
+            <div class="col-xs-12 col-sm-12 col-md-10">
+                <main>
+                    <div class="row">
+                        <div class="col-xs-12 col-sm-6 col-md-4">
+                            <article class="">
+                                <img src="" alt="">
+                                <h2>Blog</h2>
+                                <h3>Nowell Wordpress Audiotheme Features Overview</h3>
+                            </article>
+                            <article class="">
+                                <img src="" alt="">
+                                <h2>Records</h2>
+                                <h3>Atascosa Sand</h3>
+                            </article>
+                            <article class="">
+                                <img src="" alt="">
+                                <h2>Videos</h2>
+                                <h3>Drew Kennedy-Angel Brand</h3>
+                            </article>
+                        </div>
+                    </div>
 
-                <article class="">
-                    <img src="" alt="">
-                    <h2>Blog</h2>
-                    <h3>Nowell Wordpress Audiotheme Features Overview</h3>
-                </article>
-                <article class="">
-                    <img src="" alt="">
-                    <h2>Records</h2>
-                    <h3>Atascosa Sand</h3>
-                </article>
-                <article class="">
-                    <img src="" alt="">
-                    <h2>Videos</h2>
-                    <h3>Drew Kennedy-Angel Brand</h3>
-                </article>
-            </div>
+                    <div class="row">
+                        <div class="col-xs-12 col-sm-8 col-md-8">
+                            <article class="">
+                                <h4>Audiotheme Framework Demo</h4>
+                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                            </article>
+                        </div>
 
+                        <div class="col-xs-12 col-sm-4 col-md-4">
+                            <article class="">
+                                <h5>Upcomig Gigs</h5>
+                                <h6>spokaneArena</h6>
+                                <p>spokane,WA, United States</p>
+                                <p>May 21,2015</p>
+                                <h6>Telluride Bluegrass Festival</h6>
+                                <p>Telluride,CO, United States</p>
+                                <p>May 21,2015</p>
+                                <h6>Miller Auditorium</h6>
+                                <p>Kamlamazoo, MI, United States</p>
+                                <p>October 11,2015</p>
+                            </article>
+
+                            <article class="">
+                                <h5>Featured Video</h5>
+                                <img src="" alt="">
+                                <p>Overview showcasing a fex of the features availble in the Audiotheme Framework via the wordpress admin.</p>
+                            </article>
+                        </div>
+                </main>
+
+                        <div class="col-xs-12 col-sm-12 col-md-2">
+                            <aside class="">
+                                <ul>
+                                    <li>Credits</li>
+                                    <li>Blog/news</li>
+                                    <li>Style Guide</li>
+                                    <li>Contact</li>
+                                    <li>Try Audiotheme!</li>
+                                    <li>Github</li>
+                                    <li>Wordpress</li>
+                                </ul>
+
+                                <h4>Recent Release</h4>
+                                <img src="" alt="">
+                                <p>Released 9.10.13</p>
+                                <h4>Listen Now</h4>
+
+                                <h4>Special thanks</h4>
+                                <p>Drew kennedy</p>
+                                <p>Rodney Hayden</p>
+                                <p>Modern trade</p>
+
+                                <h5>Twenty Fourteen Wordpres Child Theme by AUdioTheme</h5>
+                            </aside>
+                        </div>
+                    </div>
+                </div>
 
 </body>
 
