--- a/index.html
+++ b/index.html
@@ -28,18 +28,14 @@
 </head>
 
 <body>
+    <header>
+        <h1>Progeny MMXIV</h1>
+    </header>
     <div class="container-fluid">
-        <div class="row">
-            <div class="col-xs-12 col-sm-6 col-md3">
 
-                <header>
-                    <h1>Progeny MMXIV</h1>
-                </header>
-            </div>
-        </div>
 
         <div class="row">
-            <div class="col-xs-12 col-sm-12 col-md-10">
+            <div class="col-xs-12 col-md-10">
                 <main>
                     <div class="row">
                         <div class="col-xs-12 col-sm-6 col-md-4">
@@ -48,11 +44,15 @@
                                 <h2>Blog</h2>
                                 <h3>Nowell Wordpress Audiotheme Features Overview</h3>
                             </article>
+                        </div>
+                        <div class="col-xs-12 col-sm-6 col-md-4">
                             <article class="">
                                 <img src="" alt="">
                                 <h2>Records</h2>
                                 <h3>Atascosa Sand</h3>
                             </article>
+                        </div>
+                        <div class="col-xs-12 col-sm-6 col-md-4">
                             <article class="">
                                 <img src="" alt="">
                                 <h2>Videos</h2>
@@ -60,16 +60,20 @@
                             </article>
                         </div>
                     </div>
+                    </div>
 
                     <div class="row">
-                        <div class="col-xs-12 col-sm-8 col-md-8">
+                        <div class="col-xs-12 col-sm-8">
                             <article class="">
                                 <h4>Audiotheme Framework Demo</h4>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+                                    consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est
+                                    laborum.
+                                </p>
                             </article>
                         </div>
 
-                        <div class="col-xs-12 col-sm-4 col-md-4">
+                        <div class="col-xs-12 col-sm-4">
                             <article class="">
                                 <h5>Upcomig Gigs</h5>
                                 <h6>spokaneArena</h6>
@@ -90,34 +94,34 @@
                             </article>
                         </div>
                 </main>
-
-                        <div class="col-xs-12 col-sm-12 col-md-2">
-                            <aside class="">
-                                <ul>
-                                    <li>Credits</li>
-                                    <li>Blog/news</li>
-                                    <li>Style Guide</li>
-                                    <li>Contact</li>
-                                    <li>Try Audiotheme!</li>
-                                    <li>Github</li>
-                                    <li>Wordpress</li>
-                                </ul>
-
-                                <h4>Recent Release</h4>
-                                <img src="" alt="">
-                                <p>Released 9.10.13</p>
-                                <h4>Listen Now</h4>
-
-                                <h4>Special thanks</h4>
-                                <p>Drew kennedy</p>
-                                <p>Rodney Hayden</p>
-                                <p>Modern trade</p>
-
-                                <h5>Twenty Fourteen Wordpres Child Theme by AUdioTheme</h5>
-                            </aside>
-                        </div>
-                    </div>
                 </div>
+                <div class="col-xs-12 col-sm-12 col-md-2">
+                    <aside class="">
+                        <ul>
+                            <li>Credits</li>
+                            <li>Blog/news</li>
+                            <li>Style Guide</li>
+                            <li>Contact</li>
+                            <li>Try Audiotheme!</li>
+                            <li>Github</li>
+                            <li>Wordpress</li>
+                        </ul>
+
+                        <h4>Recent Release</h4>
+                        <img src="" alt="">
+                        <p>Released 9.10.13</p>
+                        <h4>Listen Now</h4>
+
+                        <h4>Special thanks</h4>
+                        <p>Drew kennedy</p>
+                        <p>Rodney Hayden</p>
+                        <p>Modern trade</p>
+
+                        <h5>Twenty Fourteen Wordpres Child Theme by AUdioTheme</h5>
+                    </aside>
+                </div>
+        </div>
+    </div>
 
 </body>
 
