--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <![endif]-->
 
     <!-- Your stylesheet -->
-    <link href="css/style.css" rel="stylesheet">
+    <link href="./css/style.css" rel="stylesheet">
 
 </head>
 
@@ -31,95 +31,98 @@
     <header>
         <h1>Progeny MMXIV</h1>
     </header>
-        <div class="container-fluid">
-            <div class="row">
-                <div class="col-xs-12 col-md-8 col-md-push-4">
-                    <main>
-                        <div class="row">
-                            <div class="col-xs-12 col-sm-6 col-md-4">
-                                <article class="">
-                                    <img src="" alt="">
-                                    <h2>Blog</h2>
-                                    <h3>Nowell Wordpress Audiotheme Features Overview</h3>
-                                </article>
-                            </div>
-                            <div class="col-xs-12 col-sm-6 col-md-4">
-                                <article class="">
-                                    <img src="" alt="">
-                                    <h2>Records</h2>
-                                    <h3>Atascosa Sand</h3>
-                                </article>
-                            </div>
-                            <div class="col-xs-12 col-sm-6 col-md-4">
-                                <article class="">
-                                    <img src="" alt="">
-                                    <h2>Videos</h2>
-                                    <h3>Drew Kennedy-Angel Brand</h3>
-                                </article>
-                            </div>
+    <div class="container-fluid">
+        <div class="row row-no-padding">
+            <div class="col-xs-12 col-md-8 col-md-push-4">
+                <main>
+                    <section>
+                    <div class="row">
+                        <div class="col-xs-12 col-sm-6 col-md-4">
+                            <article class="">
+                                <img class="img-responsive" src="./images/nowell-featured-image-1038x576.jpg" alt="img1">
+                                <h2>Blog</h2>
+                                <h3>Nowell Wordpress Audiotheme Features Overview</h3>
+                            </article>
                         </div>
-
-
-                        <div class="row">
-                            <div class="col-xs-12 col-sm-8">
-                                <article class="">
-                                    <h4>Audiotheme Framework Demo</h4>
-                                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-                                        consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est
-                                        laborum.
-                                    </p>
-                                </article>
-                            </div>
-
-                            <div class="col-xs-12 col-sm-4">
-                                <article class="">
-                                    <h5>Upcomig Gigs</h5>
-                                    <h6>spokaneArena</h6>
-                                    <p>spokane,WA, United States</p>
-                                    <p>May 21,2015</p>
-                                    <h6>Telluride Bluegrass Festival</h6>
-                                    <p>Telluride,CO, United States</p>
-                                    <p>May 21,2015</p>
-                                    <h6>Miller Auditorium</h6>
-                                    <p>Kamlamazoo, MI, United States</p>
-                                    <p>October 11,2015</p>
-                                </article>
-
-                                <article class="">
-                                    <h5>Featured Video</h5>
-                                    <img src="" alt="">
-                                    <p>Overview showcasing a fex of the features availble in the Audiotheme Framework via the wordpress admin.</p>
-                                </article>
-                            </div>
+                        <div class="col-xs-12 col-sm-6 col-md-4">
+                            <article class="">
+                                <img class="img-responsive" src="./images/rodney-hayden-atascosa-sand.jpg" alt="img2" id="rodney">
+                                <h2>Records</h2>
+                                <h3>Atascosa Sand</h3>
+                            </article>
                         </div>
-                    </main>
+                        <div class="col-xs-12 col-sm-6 col-md-4">
+                            <article class="">
+                                <img class="img-responsive" src="./images/322267385_640.jpg" alt="img3">
+                                <h2>Videos</h2>
+                                <h3>Drew Kennedy-Angel Brand</h3>
+                            </article>
+                        </div>
                     </div>
+                </section>
 
-                <div class="col-xs-12 col-sm-12 col-md-4 col-md-pull-8">
-                    <aside class="">
-                        <ul>
-                            <li>Credits</li>
-                            <li>Blog/news</li>
-                            <li>Style Guide</li>
-                            <li>Contact</li>
-                            <li>Try Audiotheme!</li>
-                            <li>Github</li>
-                            <li>Wordpress</li>
-                        </ul>
 
-                        <h4>Recent Release</h4>
-                        <img src="" alt="">
-                        <p>Released 9.10.13</p>
-                        <h4>Listen Now</h4>
+                    <div class="row">
+                        <div class="col-xs-12 col-sm-8">
+                            <article class="">
+                                <h4>Audiotheme Framework Demo</h4>
+                                <iframe width="560" height="315" src="https://www.youtube.com/embed/uIi44Hgjpl8" frameborder="0" allowfullscreen></iframe>
+                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+                                    consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est
+                                    laborum.
+                                </p>
+                            </article>
+                        </div>
 
-                        <h4>Special thanks</h4>
-                        <p>Drew kennedy</p>
-                        <p>Rodney Hayden</p>
-                        <p>Modern trade</p>
+                        <div class="col-xs-12 col-sm-4">
+                            <article class="">
+                                <h5>Upcomig Gigs</h5>
+                                <h6>spokaneArena</h6>
+                                <p>spokane,WA, United States</p>
+                                <p>May 21,2015</p>
+                                <h6>Telluride Bluegrass Festival</h6>
+                                <p>Telluride,CO, United States</p>
+                                <p>May 21,2015</p>
+                                <h6>Miller Auditorium</h6>
+                                <p>Kamlamazoo, MI, United States</p>
+                                <p>October 11,2015</p>
+                            </article>
 
-                        <h5>Twenty Fourteen Wordpres Child Theme by AudioTheme</h5>
-                    </aside>
-                </div>
+                            <article class="">
+                                <h5>Featured Video</h5>
+                                <img src="" alt="">
+                                <p>Overview showcasing a fex of the features availble in the Audiotheme Framework via the wordpress admin.</p>
+                            </article>
+                        </div>
+                    </div>
+                </main>
+            </div>
+
+            <div class="col-xs-12 col-sm-12 col-md-4 col-md-pull-8">
+                <aside class="">
+                    <ul>
+                        <li>Credits</li>
+                        <li>Blog/news</li>
+                        <li>Style Guide</li>
+                        <li>Contact</li>
+                        <li>Try Audiotheme!</li>
+                        <li>Github</li>
+                        <li>Wordpress</li>
+                    </ul>
+
+                    <h4>Recent Release</h4>
+                    <img src="" alt="">
+                    <p>Released 9.10.13</p>
+                    <h4>Listen Now</h4>
+
+                    <h4>Special thanks</h4>
+                    <p>Drew kennedy</p>
+                    <p>Rodney Hayden</p>
+                    <p>Modern trade</p>
+
+                    <h5>Twenty Fourteen Wordpres Child Theme by AudioTheme</h5>
+                </aside>
+            </div>
         </div>
     </div>
 
